--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -7,20 +7,57 @@
     <title>{% block title %}My site{% endblock%}</title>
   </head>
   <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                    </div>
+                </div>
+                </nav>
         <div class="container">
-        <h1>My Site</h1>
-        <a href="{% url 'home' %}">Home</a> /
-        {% if user.is_authenticated %}
-            <a href="{% url 'secret' %}">Secret page</a> /
-            <a href="{% url 'secret2' %}">Secret page (class-based view)</a> /
-            <a href="{% url 'password_change' %}">Password Change</a> /
-            <a href="{% url 'logout' %}">Logout</a> /
-            <strong>You are logged in as {{ user.username }}</strong>
-        {% else %}
-            <a href="{% url 'signup' %}">Sign up</a> /
-            <a href="{% url 'login' %}">Login</a> /
-        {% endif %}
-        <hr>
+            <h1>My Site</h1>
+            <a href="{% url 'home' %}">Home</a> /
+            {% if user.is_authenticated %}
+                <a href="{% url 'secret' %}">Secret page</a> /
+                <a href="{% url 'secret2' %}">Secret page (class-based view)</a> /
+                <a href="{% url 'password_change' %}">Password Change</a> /
+                <a href="{% url 'logout' %}">Logout</a> /
+                <strong>You are logged in as {{ user.username }}</strong>
+            {% else %}
+                <a href="{% url 'signup' %}">Sign up</a> /
+                <a href="{% url 'login' %}">Login</a> /
+            {% endif %}
+<hr>
         {% block content %}
         {% endblock %}
         </div>
