--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>{% block title %}My site{% endblock%}</title>
+    <title>{% block title %} Global Directory of Fish & Seafood Providers{% endblock%}</title>
   </head>
   <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
                 <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
                 </div>
                 </nav>
         <div class="container">
-            <h1>My Site</h1>
+            <h1>Global Directory of Fish & Seafood Providers</h1>
             <a href="{% url 'home' %}">Home</a> /
             {% if user.is_authenticated %}
                 <a href="{% url 'secret' %}">Secret page</a> /
