--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -38,8 +38,8 @@
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <a href="{% url 'login'%}" class="btn btn-outline-secondary">Log in</a>
+                        <a href="{% url 'signup'%}" class="btn btn-primary ml-2">Sign up</a>
                     </form>
                     </div>
                 </div>
