--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -37,10 +37,13 @@
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <a href="{% url 'login'%}" class="btn btn-outline-secondary">Log in</a>
-                        <a href="{% url 'signup'%}" class="btn btn-primary ml-2">Sign up</a>
-                    </form>
+                    {% if user.is_authenticated %}
+                    {% else %}
+                        <form class="form-inline my-2 my-lg-0">
+                            <a href="{% url 'login'%}" class="btn btn-outline-secondary">Log in</a>
+                            <a href="{% url 'signup'%}" class="btn btn-primary ml-2">Sign up</a>
+                        </form>
+                    {% endif%}
                     </div>
                 </div>
                 </nav>
