Adding search bar in the Home

--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -1,3 +1,4 @@
+<div class="container">
 {% extends 'base.html' %}
 
 {% block content %}
@@ -6,3 +7,4 @@
 <p>
     <strong>Total users registered: </strong> {{ count }}    
 {% endblock %}
+</div>
