--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -51,6 +51,7 @@
             <h1>Global Directory of Fish & Seafood Products Providers</h1>
             <a href="{% url 'home' %}">Home</a> /
             {% if user.is_authenticated %}
+                <a href="{% url 'company_reg' %}">Company registry</a> /
                 <a href="{% url 'secret' %}">Secret page</a> /
                 <a href="{% url 'secret2' %}">Secret page (class-based view)</a> /
                 <a href="{% url 'password_change' %}">Password Change</a> /
@@ -65,6 +66,7 @@
         {% endblock %}
         </div>
         </br>
+        <!--
         <div class="container">
                 <div class="jumbotron">
                         <h1 class="display-4">Welcome to the Global Directory of Fish & Seafood Providers</h1>
@@ -74,6 +76,12 @@
                         <a class="btn btn-primary btn-lg" href="{% url 'signup' %}" role="button">Register</a>
                       </div>
         </div>
+        -->
+
+        <div class='container'>
+        <input type="text" name="Search" placeholder="Search the HS code">
+        </div>    
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
