--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+ 
+    </style>    
     <title>{% block title %} Global Directory of Fish & Seafood Providers{% endblock%}</title>
   </head>
   <body>
@@ -47,7 +53,8 @@
                     </div>
                 </div>
                 </nav>
-        <div class="container">
+        
+            <div class="container">
             <h1>Global Directory of Fish & Seafood Providers</h1>
             <a href="{% url 'home' %}">Home</a> /
             {% if user.is_authenticated %}
@@ -60,12 +67,37 @@
                 <a href="{% url 'signup' %}">Sign up</a> /
                 <a href="{% url 'login' %}">Login</a> /
             {% endif %}
-<hr>
+            
+        <hr>
+           
         {% block content %}
         {% endblock %}
         
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
-</html>
+               
+        <!--Intelligent Search bar-->
+        
+        <div class="container-fluid">
+                <!-- Control the column width, and how they should appear on different devices -->
+                <div class="row">
+                  <div class="col-sm-6" style="background-color:yellow;">50%</div>
+                  <div class="col-sm-6" style="background-color:orange;">50%</div>
+                </div>
+                <br>
+        <!-- Extra large modal -->
+        
+        
+        
+        <!--Footer GLOBEFISH-->
+        <footer class="container-fluid text-center">
+                <a href="#" title="To Top">
+                  <span class="glyphicon glyphicon-chevron-up"></span>
+                </a>
+                <p>@SAMPLE 2020 <a href="#" title="Visit w3schools">www.globefish.com</a></p>
+              </footer>
+
+
+                <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+            </body>
+            </html>
