--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -4,40 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
  
     </style>    
-    <title>{% block title %} Global Directory of Fish & Seafood Providers{% endblock%}</title>
+    <title>{% block title %} Global Directory of Professionals/Companies{% endblock%}</title>
   </head>
-=======
-    <title>{% block title %} Global Directory of Fish & Seafood Products Providers {% endblock%}</title>
- <style>
- input[type=text]{
-    width: 980px;
-    box-sizing: borde-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('searchicon.png');
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-
- }
-input[type=text]:focus{
-    width: 100%;
-}
-
- </style> 
-</head>
->>>>>>> 004479514d37a0b9aa1ecebedbf3fb94434981cd
   <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
                 <div class="container">
@@ -51,42 +25,20 @@ input[type=text]:focus{
                         <li class="nav-item active">
                         <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
+                      </ul>
                     {% if user.is_authenticated %}
                     {% else %}
                         <form class="form-inline my-2 my-lg-0">
                             <a href="{% url 'login'%}" class="btn btn-outline-secondary">Log in</a>
-                            <a href="{% url 'signup'%}" class="btn btn-primary ml-2">Sign up</a>
+                            <a href="{% url 'signup'%}" class="btn btn-primary ml-4">Sign up</a>
                         </form>
                     {% endif%}
                     </div>
                 </div>
                 </nav>
-<<<<<<< HEAD
         
             <div class="container">
-            <h1>Global Directory of Fish & Seafood Providers</h1>
-=======
-        <div class="container">
-            <h1>Global Directory of Fish & Seafood Products Providers</h1>
->>>>>>> 004479514d37a0b9aa1ecebedbf3fb94434981cd
+            <h1>Global Directory of Professionals/Companies</h1>
             <a href="{% url 'home' %}">Home</a> /
             {% if user.is_authenticated %}
                 <a href="{% url 'company_reg' %}">Company registry</a> /
@@ -104,28 +56,14 @@ input[type=text]:focus{
            
         {% block content %}
         {% endblock %}
-<<<<<<< HEAD
         
-               
-        <!--Intelligent Search bar-->
-        
-        <div class="container-fluid">
-                <!-- Control the column width, and how they should appear on different devices -->
-                <div class="row">
-                  <div class="col-sm-6" style="background-color:yellow;">50%</div>
-                  <div class="col-sm-6" style="background-color:orange;">50%</div>
-                </div>
-                <br>
-        <!-- Extra large modal -->
-        
-        
-        
+      </br>  
         <!--Footer GLOBEFISH-->
         <footer class="container-fluid text-center">
                 <a href="#" title="To Top">
                   <span class="glyphicon glyphicon-chevron-up"></span>
                 </a>
-                <p>@SAMPLE 2020 <a href="#" title="Visit w3schools">www.globefish.com</a></p>
+                <p>2020 <a href="#" title="Global Directory of Professionals/Companies">www.GDFP.org</a></p>
               </footer>
 
 
@@ -134,31 +72,3 @@ input[type=text]:focus{
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
             </body>
             </html>
-=======
-        </div>
-        </br>
-        <!--
-        <div class="container">
-                <div class="jumbotron">
-                        <h1 class="display-4">Welcome to the Global Directory of Fish & Seafood Providers</h1>
-                        <p class="lead">This is a suppliers Directory of Fish Importers, Exporters, Processors, Distributors, Wholesaler, Retailers, Brokers/Agents & Aquaculture developed by GLOBEFISH in collaboration with the FishInfoNetwork FIN. The main purpose of this information dataset is to allow users, the consultation of international fisheries professionals divided by markets and functions, aiming to promote fish trade.</p>
-                        <hr class="my-4">
-                        <p>You're welcome to list your company as a Fish & Seafood Provider. Click below to register!</p>
-                        <a class="btn btn-primary btn-lg" href="{% url 'signup' %}" role="button">Register</a>
-                      </div>
-        </div>
-        -->
-
-        <div class='container'>
-        <p>Choose the commodity code below that best mathces your goods to see more information</p>
-        <input type="text" name="Search" placeholder="Search the HS code">
-        </div>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
- 
-</body>
-</html>
->>>>>>> 004479514d37a0b9aa1ecebedbf3fb94434981cd
